JENA-1288: Remove use of Xerces when alternatives exist.